syntax = "proto3";

package rivet.backend.pkg.mm.lobby_runtime_aggregate;

import "proto/common.proto";

message Request {
	repeated rivet.common.Uuid namespace_ids = 1;
	int64 query_start = 2;
	int64 query_end = 3;
}

message Response {
	message NamespaceUsage {
		reserved 3, 5;

		rivet.common.Uuid namespace_id = 1;
		rivet.common.Uuid region_id = 2;
		int64 total_time = 4; // in milliseconds
	}

	repeated NamespaceUsage usage = 1;
}
